--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 </div></button>
             <div class="register">
-                <p>You don't have an account? <a href="index2.html">Register</a></p>
+                <p>You don't have an account? <a href="register.html">Register</a></p>
             </div>
         </form>
     </section>
